fixed modal backdrop not showing updated linkedin link adjusted speed of project animations

--- a/src/assets/sass/_animations.scss
+++ b/src/assets/sass/_animations.scss
@@ -82,8 +82,8 @@
     }
   }
   .slide-in-right {
-    -webkit-animation: slide-in-right 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
-            animation: slide-in-right 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+    -webkit-animation: slide-in-right 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+            animation: slide-in-right 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
   }
   @-webkit-keyframes slide-in-right {
     0% {
@@ -110,8 +110,8 @@
     }
   }
   .slide-in-left {
-    -webkit-animation: slide-in-left 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
-            animation: slide-in-left 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+    -webkit-animation: slide-in-left 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+            animation: slide-in-left 0.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
   }
   @-webkit-keyframes slide-in-left {
     0% {
@@ -138,8 +138,8 @@
     }
   }
   .shadow-drop {
-    -webkit-animation: shadow-drop 1.2s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
-            animation: shadow-drop 1.2s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+    -webkit-animation: shadow-drop 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
+            animation: shadow-drop 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
   }
   @-webkit-keyframes shadow-drop {
     0% {
